--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -1,10 +1,11 @@
 CC = g++
+CXXFLAGS = -pg -g -O2 -fopenmp -std=gnu++11
 CFLAGS = -pg -g -O2 -Wall
 LDFLAGS = -pg -g
 LIBS = -lm
 
 raytracer:  main.o raytracer.o util.o light_source.o scene_object.o bmp_io.o
-	$(CC) $(CFLAGS) -o raytracer \
+	$(CC) $(CXXFLAGS) -o raytracer \
 	main.o raytracer.o util.o light_source.o scene_object.o bmp_io.o $(LIBS)
 
 clean:
